--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     />
 
     <link rel="stylesheet" href="images" />
-    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/body.css" />
+    <link rel="stylesheet" href="styles/navbar.css" />
+    <link rel="stylesheet" href="styles/footer.css" />
   </head>
 
   <body>
